--- a/src/css/App.css
+++ b/src/css/App.css
@@ -8,20 +8,14 @@ body {margin: 0; padding: 0;}
     background: #e8d98b;
     color: blue;
   }
-    #root {
-      width: 96%;
-      height: max-content;
-      margin: auto;
-      background: #fff;
-      overflow: auto;
-      border: 1px solid #000;
-      border-top: 1px solid #fff;
-    }
       .App {
-        width: 100%;
-        height: 575px;
+        width: 96%;
+        height: calc(100vh - 46px);
+        margin: auto;
         background: rgb(248, 246, 246);
         overflow-y: auto;
+        border: 1px solid #000;
+        border-top: 1px solid #fff;
       }
         .supman {
           background: url('../img/supman.png');
